--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ tools/mesh_export.zip
 
 asset_builder/asset_builder
 
+out.txt
+
 # generated file
 src/player/inventory_mapping.c
 64drive_usb.exe
